                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 05-08-2005 fixed: cbr/cbz support. failed with dir if hide parent items wasn't enabled.
 - 05-08-2005 fixed: some pal dvd's would be properly detected as interlaced
 - 04-08-2005 fixed: filerar. possible lockup at end of file.
 - 04-08-2005 fixed: navigation issues in media windows when activated and last path was a rar.
 - 04-08-2005 fixed: rar files created in unix would fail to play.
 - 04-08-2005 fixed: mplayer logged use of unimplemented function fputs
 - 04-08-2005 fixed: when ftp server was stopped (ie reboot, restartapp...), clients were not disconnected
 - 04-08-2005 fixed: audio was 5 ms later using normal audio output and 10 ms with passthrough
 - 04-08-2005 fixed: rar url support. failed to play dvd images in .rar using mplayer.
 - 04-08-2005 changed: .iso files are now treated as dvd image files just as .img was. (if you want to force old behaviour rename file to .mpg)
 - 04-08-2005 fixed: dialogs with conditional visibility could sometimes end up stuck on screen
 - 04-08-2005 fixed: cbr/cbz support. if pictures was in a folder, playback would fail.
 - 04-08-2005 changed: toast dialog, message display time starts after the fade in of the dialog is done
 - 04-08-2005 changed: made downloading of "Shoutcast Top 500" cancelable
 - 04-08-2005 updated: German language file
 - 04-08-2005 updated: Dutch language file (Thnx to nightspirit)
 - 04-08-2005 updated: Norwegian language file (Thnx to vnm)
 - 04-08-2005 added: subtitles can reside in "subs/","subtitles/","../subs/" and "../subtitles/".
 - 04-08-2005 fixed: fat-x truncation could result in filenames ending with ' ' making them unreadable.